INC-1: добавлена конфигурация для env и args

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ DATABASE_NAME=gofermart
 DATABASE_USER=postgres
 # Пароль для доступа к БД
 DATABASE_PASSWORD=postgres
+
+RUN_ADDRESS=run1
+DATABASE_URI=database1
+ACCRUAL_SYSTEM_ADDRESS=accrual1
+LOG_LEVEL=warning
