INC-1: добавлена хендлеры для всех роутов

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DATABASE_USER=postgres
 # Пароль для доступа к БД
 DATABASE_PASSWORD=postgres
 
-RUN_ADDRESS=run1
+RUN_ADDRESS=127.0.0.1:8080
 DATABASE_URI=database1
 ACCRUAL_SYSTEM_ADDRESS=accrual1
 LOG_LEVEL=warning
